Fix icon widths

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           class="button button-reset"
           onclick="resetBoard()"
         >
-          <i class="fa-solid fa-rotate-left"></i>
+          <i class="fa-solid fa-fw fa-rotate-left"></i>
           Reset
         </button>
 
@@ -125,7 +125,7 @@
           class="button button-print"
           onclick="printBoard()"
         >
-          <i class="fa-solid fa-print"></i>
+          <i class="fa-solid fa-fw fa-print"></i>
           Print
         </button>
 
@@ -160,7 +160,7 @@
         onclick="openMenu()"
         title="Customize"
       >
-        <i class="fa-solid fa-paintbrush fa-2xl"></i>
+        <i class="fa-solid fa-fw fa-paintbrush fa-2xl"></i>
       </button>
 
       <button
@@ -168,7 +168,7 @@
         onclick="closeMenu()"
         title="Customize"
       >
-        <i class="fa-solid fa-xmark fa-2xl"></i>
+        <i class="fa-solid fa-fw fa-xmark fa-2xl"></i>
       </button>
     </main>
 
